--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,13 @@ body{
     flex-direction: column;
 }
 
+form{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    padding: 20px;
+}
+
 input[type=number]::-webkit-inner-spin-button { 
     -webkit-appearance: none;
     
