--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,29 @@
 body{
     display: flex;
     flex-direction: column;
+    background-image: url('../img/FOTO.png');
+    background-position: 100%;
+    color: white;
+    font-size: 20px;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 60%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+#mensagemOculta{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+label{
     padding: 20px;
 }
 
