--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,17 @@ body{
 form{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
 }
 
 #mensagemOculta{
