--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,30 @@
 body{
     display: flex;
     flex-direction: column;
-    background-image: url('../img/FOTO.png');
-    background-position: 100%;
-    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-size: 20px;
+    background-color: white;
+    opacity: 0.5;
+    width: 70%;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 70%;
 }
 
 section{
@@ -32,7 +43,7 @@ section{
 }
 
 label{
-    padding: 20px;
+    padding: 10px;
 }
 
 input[type=number]::-webkit-inner-spin-button { 
@@ -42,6 +53,5 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] { 
    -moz-appearance: textfield;
    appearance: textfield;
-
 }
 
