--- a/css/reset.css
+++ b/css/reset.css
@@ -7,6 +7,8 @@
 body, html {
     width: 100%;
     height: 100%;
+    background-image: url('../img/FOTO.png');
+    background-size: cover;
 }
 
 :root{
