--- a/css/reset.css
+++ b/css/reset.css
@@ -9,6 +9,7 @@ body, html {
     height: 100%;
     background-image: url('../img/FOTO.png');
     background-size: cover;
+    opacity: 0.9;
 }
 
 :root{
