--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
+    font-size: 16px;
     background-color: white;
     opacity: 0.95;
     width: 70%;
@@ -21,7 +21,7 @@ main{
 
 .radios{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: flex-start;
 }
